feat: add notations of swagger
